--- a/apps.properties
+++ b/apps.properties
@@ -1,3 +1,3 @@
-db.default.url = jdbc:postgresql://postgresql:5432/analytics
+db.default.url = jdbc:postgresql://postgresanalytics:5432/analytics
 db.default.user = axelor
 db.default.password = axelor
