--- a/build.gradle
+++ b/build.gradle
@@ -35,17 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     //testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
-
+    runtimeOnly 'org.postgresql:postgresql'
     implementation project(':modules:analytics')
 }
-
-/*dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.18.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
-
-    implementation project(':modules:analytics')
-}*/
 
