--- a/modules/analytics/build.gradle
+++ b/modules/analytics/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.axelor.app'
+    id("org.unbroken-dome.test-sets") version "4.1.0"
 }
 
 group = 'com.axelor'
@@ -13,6 +14,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+}
+
+testSets {
+    integrationTest
 }
 
 test {
